[package]
name = "uuidv6-rs"
version = "0.1.0"
edition = "2018"
authors = ["Wes Widner <wes@manwe.io>"]
description = "UUIDv6 reference implementation"
license = "Apache-2.0"
repository = "https://github.com/kai5263499/uuidv6-rs"
keywords = ["uuidv6", "generator", "uuid"]
readme = "README.md"

[dependencies]
byteorder = "1.4.3"
chrono = "0.4.19"
env_logger = "0.9.0"
hex = "0.4.3"
interfaces = "0.0.7"
lazy_static = "1.4.0"
log = "0.4.14"
rand = "0.8.4"